--- a/GitHub API/package.json
+++ b/GitHub API/package.json
@@ -11,6 +11,9 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "dom-to-image-more": "^3.6.0",
+    "html2canvas": "^1.4.1",
+    "lucide-react": "^0.511.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "tailwindcss": "^4.1.7"
